Closed Bug 312788 Opened 20 years ago Closed 20 years ago

Crash exposing invisible plugins

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

()

Details

(Keywords: access, fixed1.8)

Attachments

(2 files, 1 obsolete file)

If a plugin has a width or height of 0 Firefox crashes while exposing the MSAA. In any case, we don't want to expose invisible content via MSAA.
Attachment #199887 - Attachment is obsolete: true
This is important because invisible plugins are used to expose audio content, for example on BBC's "listen live" links.
Severity: normal → critical
Status: NEW → ASSIGNED
Attachment #199889 - Flags: review?(parente) → review+
Flags: blocking1.8rc1?
We're not going to block the release on this, but if this patch gets super reviewed by jst, laned on the trunk and verified in the next couple of days, nominate the patch for branch approval. Thanks.
Flags: blocking1.8rc1? → blocking1.8rc1-
Attachment #199889 - Flags: superreview?(jst) → superreview?(bzbarsky)
Attachment #199889 - Flags: superreview?(bzbarsky) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment on attachment 199889 [details] [diff] [review] Don't expose invisible plugins (0 area rect). While we're at it, make absolutely sure we don't ever try to create children for native accessibles (make native accessibles inherit from the leaf class) sr=jst too fwiw.
Attachment #199889 - Flags: approval1.8rc1?
Attachment #199889 - Flags: approval1.8rc1? → approval1.8rc1+
Verified that this has been fixed in dev build 10/19/05 build from aaron.
Status: RESOLVED → VERIFIED
Keywords: fixed1.8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: