Bug 312788. Crash when exposing plugins with width or height of 0. r=parente, sr=bryner