accessible/src/msaa/nsHTMLWin32ObjectAccessible.h
@@ -40,7 +40,7 @@
 #define _nsHTMLWin32ObjectAccessible_H_
 
 #include "nsIAccessibleWin32Object.h"
-#include "nsAccessibleWrap.h"
+#include "nsBaseWidgetAccessible.h"
 
 struct IAccessible;
 
@@ -74,7 +74,7 @@ protected:
   *   object returned by us in Accessible::NewAccessible() that gets the IAccessible
   *   from the windows system from the window handle.
   */
-class nsHTMLWin32ObjectAccessible : public nsAccessibleWrap,
+class nsHTMLWin32ObjectAccessible : public nsLeafAccessible,
                                     public nsIAccessibleWin32Object
 {
 public:
